@@ -21,11 +21,11 @@ import java.util.List;
 
 public class EmiPressingTubRecipe extends BasicEmiRecipe {
     public static final EmiRecipeCategory CATEGORY = new EmiRecipeCategory(
-            new ResourceLocation(ModRecipes.PRESSING_TUB_RECIPE.toString()),
+            ResourceLocation.parse(ModRecipes.PRESSING_TUB_RECIPE.toString()),
             EmiIngredient.of(Ingredient.of(ModItems.PRESSING_TUB))
     );
 
-    private static final ResourceLocation BG = new ResourceLocation(KaleidoscopeTavern.MOD_ID, "textures/gui/jei/pressing_tub.png");
+    private static final ResourceLocation BG = KaleidoscopeTavern.modLoc("textures/gui/jei/pressing_tub.png");
 
     public static final int WIDTH = 155;
     public static final int HEIGHT = 54;
@@ -40,7 +40,8 @@ public class EmiPressingTubRecipe extends BasicEmiRecipe {
         registry.addCategory(CATEGORY);
         registry.addWorkstation(CATEGORY, EmiStack.of(ModItems.PRESSING_TUB));
 
-        registry.getRecipeManager().getAllRecipesFor(ModRecipes.PRESSING_TUB_RECIPE).forEach(recipe -> {
+        registry.getRecipeManager().getAllRecipesFor(ModRecipes.PRESSING_TUB_RECIPE).forEach(holder -> {
+            var recipe = holder.value();
             int needPressCount = IPressingTub.MAX_FLUID_AMOUNT / recipe.getFluidAmount();
             if (needPressCount * recipe.getFluidAmount() < IPressingTub.MAX_FLUID_AMOUNT) {
                 needPressCount++;
@@ -53,7 +54,7 @@ public class EmiPressingTubRecipe extends BasicEmiRecipe {
 
             List<EmiStack> outputs = List.of(EmiStack.of(recipe.getFluid().getBucket()));
 
-            registry.addRecipe(new EmiPressingTubRecipe(recipe.getId(), inputs, outputs));
+            registry.addRecipe(new EmiPressingTubRecipe(holder.id(), inputs, outputs));
         });
     }
 
@@ -61,14 +62,14 @@ public class EmiPressingTubRecipe extends BasicEmiRecipe {
     public void addWidgets(WidgetHolder widgets) {
         widgets.addTexture(BG, 1, 1, WIDTH, HEIGHT, 0, 0);
 
-        widgets.addSlot(inputs.get(0), 32, 13)
+        widgets.addSlot(inputs.getFirst(), 32, 13)
                 .drawBack(false);
 
-        widgets.addSlot(outputs.get(0), 124, 14)
+        widgets.addSlot(outputs.getFirst(), 124, 14)
                 .recipeContext(this)
                 .large(true);
 
-        Component tip = Component.translatable("jei.kaleidoscope_tavern.pressing_tub.need_press_count", inputs.get(0).getAmount());
+        Component tip = Component.translatable("jei.kaleidoscope_tavern.pressing_tub.need_press_count", inputs.getFirst().getAmount());
         FormattedCharSequence sequence = tip.getVisualOrderText();
         Font font = Minecraft.getInstance().font;
         widgets.addText(tip, (WIDTH - font.width(sequence) - 5), 44, 0x555555, false);
